--- a/include/.vscode/settings.json
+++ b/include/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "C_Cpp.errorSquiggles": "Enabled",
-    "C_Cpp.default.intelliSenseMode": "gcc-x64"
+    "C_Cpp.default.intelliSenseMode": "gcc-x64",
+    "files.associations": {
+        "iostream": "cpp"
+    }
 }
