--- a/include/.vscode/settings.json
+++ b/include/.vscode/settings.json
@@ -2,6 +2,9 @@
     "C_Cpp.errorSquiggles": "Enabled",
     "C_Cpp.default.intelliSenseMode": "gcc-x64",
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "iosfwd": "cpp",
+        "ostream": "cpp",
+        "vector": "cpp"
     }
 }
