Plotting algortihm fixed and tested.

--- a/include/Makefile
+++ b/include/Makefile
@@ -1,2 +1,5 @@
-bin: binSearch.cpp
-	g++ --std=c++17 -g binSearch.cpp -o bin
+debug: debug.cpp
+	g++ --std=c++17 -g debug.cpp -o debug
+
+#bin: binSearch.cpp
+#	g++ --std=c++17 -g binSearch.cpp -o bin
