Plotting algorithm tested successfully after fixing the Coordinate misamatch.

--- a/include/Makefile
+++ b/include/Makefile
@@ -1,5 +1,9 @@
 debug: debug.cpp
 	g++ --std=c++17 -g debug.cpp -o debug
+	./debug;
+
+headers: algorithms.h
+	g++ --std=c++17 -g algorithms.h
 
 #bin: binSearch.cpp
 #	g++ --std=c++17 -g binSearch.cpp -o bin
