Removed test precompiled headers, updated Makefile.

--- a/include/Makefile
+++ b/include/Makefile
@@ -1,9 +1,8 @@
-debug: debug.cpp
+debug:
 	g++ --std=c++17 -g debug.cpp -o debug
-	./debug;
 
-headers: algorithms.h
-	g++ --std=c++17 -g algorithms.h
+headers:
+	g++ --std=c++17 -g algorithms.h cartesianobj.h cartesian.h
 
 #bin: binSearch.cpp
 #	g++ --std=c++17 -g binSearch.cpp -o bin
