--- a/include/Makefile
+++ b/include/Makefile
@@ -1,8 +1,8 @@
-debug:
+debug: debug.cpp
 	g++ --std=c++17 -g debug.cpp -o debug
 
 headers:
-	g++ --std=c++17 -g algorithms.h cartesianobj.h cartesian.h
+	g++ --std=c++17 -g algorithms.h
 
 #bin: binSearch.cpp
 #	g++ --std=c++17 -g binSearch.cpp -o bin
