--- a/include/Makefile
+++ b/include/Makefile
@@ -1,8 +1,5 @@
-debug: debug.cpp
-	g++ --std=c++17 -g debug.cpp -o debug
-
-headers:
-	g++ --std=c++17 -g algorithms.h
+headers: algorithm.h cartesian.h cartesianincl.h cartesianobj.h chemistry.h data.h ds.h environment.h exceptions.h executioninfo.h externeltools.h file.h math.h stringmath.h
+	g++ --std=c++17 -g algorithms.h cartesian.h cartesianincl.h cartesianobj.h chemistry.h data.h ds.h environment.h exceptions.h executioninfo.h externeltools.h file.h math.h stringmath.h
 
 #bin: binSearch.cpp
 #	g++ --std=c++17 -g binSearch.cpp -o bin
