--- a/include/Makefile
+++ b/include/Makefile
@@ -1,5 +1,5 @@
-headers: algorithm.h cartesian.h cartesianincl.h cartesianobj.h chemistry.h data.h ds.h environment.h exceptions.h executioninfo.h externeltools.h file.h math.h stringmath.h
-	g++ --std=c++17 -g algorithms.h cartesian.h cartesianincl.h cartesianobj.h chemistry.h data.h ds.h environment.h exceptions.h executioninfo.h externeltools.h file.h math.h stringmath.h
-
+headers: algorithms.h cartesian.h cartesianincl.h cartesianobj.h chemistry.h data.h ds.h environment.h exceptions.h executioninfo.h file.h math.h stringmath.h
+	g++ --std=c++17 -g algorithms.h cartesian.h cartesianincl.h cartesianobj.h chemistry.h data.h ds.h environment.h exceptions.h executioninfo.h file.h math.h stringmath.h
+	
 #bin: binSearch.cpp
 #	g++ --std=c++17 -g binSearch.cpp -o bin
