--- a/include/Makefile
+++ b/include/Makefile
@@ -1,5 +1,7 @@
 headers: algorithms.h cartesian.h cartesianincl.h cartesianobj.h chemistry.h data.h ds.h environment.h exceptions.h executioninfo.h file.h math.h stringmath.h
 	g++ --std=c++17 -g algorithms.h cartesian.h cartesianincl.h cartesianobj.h chemistry.h data.h ds.h environment.h exceptions.h executioninfo.h file.h math.h stringmath.h
-	
+
+clear:
+	rm -f *.gch	
 #bin: binSearch.cpp
 #	g++ --std=c++17 -g binSearch.cpp -o bin
